--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# Ignore Heroku ENV Vars
+/config/initializers/heroku_env.rb
+/.env
+
+.DS_Store
